<resources>
    <string name="app_name">Air</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <!-- 2021.09.06 -->
    <string name="ymd">%04d.%02d.%02d</string>
    <string name="time">%2dH %2dS %2dM</string>
    <string name="target_time">목표 시간 05H 00M 00S</string>
    <string name="stats">통계</string>
    <string name="group">그룹</string>
    <string name="todo">할 일</string>
    <string name="memo">메모</string>
    <string name="subject">과목</string>
    <string name="date_pattern">yyyy.MM.dd</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="time_pattern">%02d:%02d:%02d</string>
    <string name="please_set_memo">자유롭게 메모해주세요</string>
    <string name="email">이메일</string>
    <string name="please_set_email">이메일을 입력해주세요.</string>
    <string name="validate_code">인증코드</string>
    <string name="please_set_validate_code">인증코드를 입력해주세요.</string>
    <string name="validate">인증</string>
    <string name="sign_in">로그인</string>
    <string name="dont_you_have_an_account">회원이 아니신가요?</string>
    <string name="lets_sign_up">회원가입하기</string>
    <string name="sign_up">회원가입</string>
    <string name="please_set_nickname">닉네임을 입력해주세요.</string>
    <string name="nickname">닉네임</string>
    <string name="do_you_have_an_account">회원이신가요?</string>
    <string name="lets_sign_in">로그인하기</string>
    <string name="save">저장</string>
</resources>